# deliveryoptimizer

./: .clang-tidy  .gitignore  cloudbuild.yaml
.github/: pull_request_template.md
.github/scripts/: check-backend-format.sh  check-backend-static.sh  validate-pr-body.py
.github/workflows/: e2e-docker.yml  playwright-e2e.yml  pr-light.yml
app/api/: CMakeLists.txt
app/api/include/deliveryoptimizer/api/: forecast_optimizer.hpp  optimization_job_runtime.hpp  optimization_job_store.hpp  optimize_request.hpp  solve_execution.hpp
app/api/include/deliveryoptimizer/api/internal/: json_utils.hpp
app/api/src/: api_server.cpp  forecast_optimizer.cpp  observability.cpp  optimization_job_runtime.cpp  optimization_job_store.cpp  optimize_request.cpp  server_options.cpp  solve_coordinator.cpp  solve_execution.cpp  vroom_runner.cpp
app/api/src/endpoints/: deliveries_optimize_endpoint.cpp  health_endpoint.cpp  optimization_jobs_endpoint.cpp  osrm_proxy_endpoint.cpp
app/mobile/: README.md  app.json  eslint.config.js  package.json
app/mobile/app/: modal.tsx
app/mobile/app/(tabs)/: index.tsx
app/mobile/components/: themed-text.tsx
app/mobile/components/ui/: collapsible.tsx
app/mobile/src/features/deliveries/: DeliveryCard.tsx  endShift.ts  importSession.ts  transformSession.ts  types.ts  useRoutePersistence.ts
app/ui/: .env.example  .prettierignore  README.md  apphosting.yaml  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
app/ui/public/: sw.js
app/ui/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/ui/src/app/api/feedback/: route.ts
app/ui/src/app/api/optimization-jobs/: route.ts  routeHelpers.ts
app/ui/src/app/components/: FeedbackLauncher.module.css  FeedbackLauncher.tsx  ServiceWorkerRegistration.tsx  ShellNavbar.tsx
app/ui/src/app/components/AddressGeocoder/: AutocompleteDropdown.tsx  CSVUploader.tsx  DeliveryForm.tsx  ResultsDisplay.tsx  ValidationErrors.tsx  VehicleForm.tsx  index.tsx  types.ts  utils.ts
app/ui/src/app/components/navbar/: MobileBottomBar.tsx  MobileNavbar.tsx  Navbar.tsx
app/ui/src/app/components/sidebar/: MobileSidebar.tsx  SidebarEditButton.tsx  SidebarResultsButton.tsx
app/ui/src/app/driver_assist/: page.tsx  storage.ts  styles.ts
app/ui/src/app/driver_assist/components/: DriverFooter.tsx  InfoLine.tsx  ReportIssueDialog.tsx  StatBlock.tsx  StopCard.tsx  icons.tsx
app/ui/src/app/driver_assist/summary/: page.tsx  styles.ts  summaryUtils.ts
app/ui/src/app/edit/: edit.module.css  formStyles.ts  formStyles.v2.ts  page.tsx
app/ui/src/app/edit/components/: AddressAutocompleteInput.tsx  AddressCard.tsx  AddressEmptyState.tsx  AddressOverlay.tsx  AddressPagination.tsx  AddressPaginationMobile.tsx  AddressRowHeader.tsx  AddressSearchBar.tsx  AddressSection.tsx  CSVImportModal.tsx  ConfirmDeletionOverlay.tsx  ConfirmVehicleDeletionOverlay.tsx  EditPageFooter.tsx  ErrorPopup.tsx  MobileBottomBar.tsx  MobileEditPageFooter.tsx  MobileNavbar.tsx  MobileSidebar.tsx  Navbar.tsx  OptimizingModal.tsx  OverlayAutocompleteDropdown.tsx  OverlayFieldError.tsx  RowIconButtons.tsx  VehicleDetailsOverlay.tsx  VehicleEmptyState.tsx  VehicleIconButtons.tsx  VehicleRow.tsx  VehicleSection.tsx  VehicleStartLocationOverlay.tsx
app/ui/src/app/edit/constants/: timeOptions.ts
app/ui/src/app/edit/hooks/: useAddresses.ts  useCSVImport.ts  useCSVUpload.ts  useFocusTrap.ts  useHasOptimizeResults.ts  useOptimize.ts  useVehicles.ts
app/ui/src/app/edit/types/: delivery.ts  vroomResponse.ts
app/ui/src/app/edit/utils/: csvParserUtils.ts  deliveryHelpers.ts  (+5 more)
app/ui/src/app/results/: formStyles.mobile.ts  page.tsx  types.ts
app/ui/src/app/types/: geocoding.ts
app/ui/src/app/upload-route/: page.tsx
app/ui/src/app/upload-save-point/: page.tsx
app/ui/src/app/utils/: routeUtils.tsx
app/ui/src/app/welcome/: page.tsx
app/ui/src/lib/driver-route/: exportSummary.ts  importSession.ts  transformSession.ts  types.ts
app/ui/src/lib/feedback/: github.ts  issue.ts  schema.ts  screenshot.ts  security.ts  storage.ts
app/ui/src/lib/session/: editPageDraft.ts  exportSession.ts  importSession.ts
app/ui/src/lib/solver/: cppApiPayload.ts  deliveryOptimizerClient.ts  vroomMapping.ts
app/ui/src/lib/types/: common.types.ts  delivery.types.ts  optimize.types.ts  vehicle.types.ts
app/ui/src/lib/utils/: phone.ts  retry.ts
app/ui/src/lib/validation/: common.schema.ts  delivery.schema.ts  optimize.schema.ts  session.schema.ts  vehicle.schema.ts  whatsapp.schema.ts
app/ui/src/lib/whatsapp/: whatsappClient.ts
app/ui/src/tests/: addressCardToDeliveryInput.test.ts  deliveryHelpers.test.ts  driverRouteImport.test.ts  driverRouteSummaryExport.test.ts  duplicateRoute.test.ts  editPageDraft.test.ts  feedbackGithub.test.ts  feedbackIssue.test.ts  feedbackRoute.test.ts  feedbackSecurity.test.ts  feedbackStorage.test.ts  hasCachedLocationWithState.test.ts  normalizeTimeOption.test.ts  optimizationJobResultRoute.test.ts  phone.test.ts  recipientSummary.test.ts  secondsToTimeString.test.ts  sendRouteRoute.test.ts  sendRoutesModal.test.ts  sessionMapper.test.ts  vroomToRoutes.test.ts  whatsappClient.test.ts  whatsappSchema.test.ts
app/ui/tests/e2e/: optimize-flow.spec.ts
deploy/compose/: docker-compose.arm64.yml  docker-compose.e2e-override.yml
deploy/env/: http-server.arm64.env
deploy/services/: osrm-entrypoint.sh  osrm.Dockerfile
docs/: cpp-local-contributor-setup.md
infra/cloud-run/: service.yaml
infra/scripts/: prepare-osrm-data.sh
libs/adapters/: CMakeLists.txt
libs/adapters/include/deliveryoptimizer/adapters/: json_utils.hpp
libs/adapters/src/: json_utils.cpp  vroom_contract.cpp
tests/: CMakeLists.txt
tests/api/forecast_optimizer/: weather_forecast_optimizer_test.cpp
tests/api/observability/: renders_prometheus_metrics_test.cpp
tests/config/: load_server_options_from_env_test.cpp
tests/integration/e2e/: e2e_sf_playwright.env  e2e_stack.env
tests/integration/http_server/: health_coalesces_cold_osrm_probe_test.sh  osrm_proxy_forwards_allowed_service_with_query_test.sh
(+67 files in other folders)
